# glexample

./: CMakeLists.txt  README.md  app.h  assets.h  exceptions.h  init.h  main.cpp  scratch.cpp  shader.h  window.h
assets/shaders/: triangle.vert
glexample/: CMakeLists.txt  README.md
glexample/include/: game.h  shader.h  window.h
glexample/include/glexample/: Constants.h  Mesh.h  Texture.h  assets.h  camera.h  game.h  shader.h
glexample/include/glexample/glfw/: init.h  monitor.h  window.h
glexample/lib/include/: init.h
glexample/lib/src/: init.cpp
glexample/test/: scratch.cpp
mypony/: CMakeLists.txt
mypony/assets/shaders/: random_rectangles.frag  random_rectangles.vert
mypony/exe/: glfw.cpp  main.cpp
scratch/: .gitignore  main.cpp
